Defect DEF2191 fix

--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -57,7 +57,7 @@
           <div class="item-actions"></div>
         </div>
       </div>
-      <div class="list-group-item d-flex align-items-center justify-content-start" (dblclick)="viewFunction(i)"
+      <div class="list-group-item d-flex align-items-center justify-content-start hover" (dblclick)="viewFunction(i)"
         *ngFor="let item of records;let i=index">
         <div class="item-name fw-500">
           <span class="ml-2 pl-1 text-dark">{{item.name}}</span>
