--- a/src/app/home/data-format-listing/data-format-listing.component.html
+++ b/src/app/home/data-format-listing/data-format-listing.component.html
@@ -57,7 +57,7 @@
               <div class="item-reference-count text-center">{{dataFormat._references}}</div>
             </div>
             <div class="item-format-type text-left ml-4">
-              <odp-format-type-badge [data]="dataFormat.formatType"></odp-format-type-badge>
+              <odp-format-type-badge [data]="dataFormat"></odp-format-type-badge>
             </div>
             <div class="item-actions d-flex align-items-center justify-content-end">
               <span id="lib-view" class="fw-600 font-13 hover mr-3"
