--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
@@ -7,27 +7,9 @@
     </div>
     <div class="mapping-container my-3 d-flex border rounded">
         <div [ngClass]="{'show':selectedTargetField}" class="source-fields position-relative">
-            <div *ngIf="showFormulaBuilder" class="formula-builder position-absolute h-100 w-100 bg-white">
-                <div class="sub-header d-flex align-items-start justify-content-between border-bottom p-3">
-                    <span class="font-14 fw-500">Formula for:<br>
-                        <span class="text-primary">{{selectedTargetField.dataPath}}</span>
-                    </span>
-                    <button type="button" class="btn btn-link text-dark" (click)="showFormulaBuilder=false">
-                        <span class="dsi dsi-close fw-500"></span>
-                    </button>
-                </div>
-                <div *ngIf="selectedTargetField.source && selectedTargetField.source.length>0"
-                    class="d-flex flex-column p-3 border-bottom text-secondary">
-                    <span *ngFor="let item of selectedTargetField.source;let sourceIndex=index"
-                        class="font-13 fw-400">Use <i>{{item.dataPath}}</i> as <span
-                            class="fw-500">input{{sourceIndex+1}}</span>
-                    </span>
-                </div>
-                <textarea class="form-control border-0" [(ngModel)]="selectedTargetField.formula">{{baseCode}}</textarea>
-            </div>
             <ng-container *ngIf="selectedTargetField">
                 <ng-container *ngIf="sourceFields">
-                    <div class="sub-header d-flex align-items-start justify-content-between border-bottom mb-3 p-3">
+                    <div class="sub-header d-flex align-items-start justify-content-between border-bottom p-3 mb-2">
                         <div class="d-flex flex-column">
                             <span class="font-14 fw-500">Select Source Fields</span>
                             <span class="font-14 fw-500 text-secondary">For:&nbsp;
@@ -35,14 +17,17 @@
                             </span>
                         </div>
                     </div>
-                    <div class="field-block d-flex align-items-center p-3"
+                    <!-- <div class="field-block d-flex align-items-center p-2"
                         *ngFor="let item of customSourceFields; let i=index;">
-                        <odp-checkbox [edit]="edit" class="mr-2 ml-3" [checked]="isSourceSelected(item)"
+                        <odp-checkbox [edit]="edit" class="mx-2" [checked]="isSourceSelected(item)"
                             (checkedChange)="toggleSource($event,item)"></odp-checkbox>
                         <div class="input-wrapper w-100 d-flex align-items-center position-relative mr-3">
                             <span class="font-14 fw-400">{{item?.name}}</span>
                         </div>
-                    </div>
+                    </div> -->
+                    <ng-container *ngFor="let item of customSourceFields; let i=index;">
+                        <ng-container *ngTemplateOutlet="sFields; context: {def:item}"></ng-container>
+                    </ng-container>
                 </ng-container>
                 <ng-container *ngIf="!sourceFields">
                     <div class="sub-header d-flex align-items-start justify-content-between border-bottom mb-3 p-3">
@@ -62,9 +47,9 @@
                         Structure
                         Found. Please add a Data Structure in Previous node or create fields manually
                         by click on the <span class="dsi dsi-plus-circle text-primary mx-1 font-11"></span> icon</div>
-                    <div class="field-block d-flex align-items-center mb-1"
+                    <div class="field-block bg-white d-flex align-items-center mb-1"
                         *ngFor="let item of customSourceFields; let i=index;">
-                        <odp-checkbox [edit]="edit" class="mr-2 ml-3" [checked]="isSourceSelected(item)"
+                        <odp-checkbox [edit]="edit" class="mx-2" [checked]="isSourceSelected(item)"
                             (checkedChange)="toggleSource($event,item)"></odp-checkbox>
                         <div class="input-wrapper w-100 d-flex align-items-center position-relative mr-3">
                             <input type="text" class="form-control" placeholder="Data Path" odpAutoFocus
@@ -79,13 +64,32 @@
                 </ng-container>
             </ng-container>
         </div>
-        <div class="destination-fields bg-light">
+        <div class="destination-fields bg-light position-relative">
+            <div *ngIf="showFormulaBuilder" class="formula-builder position-absolute h-100 w-100 bg-white border-left">
+                <div class="sub-header d-flex align-items-start justify-content-between border-bottom p-3">
+                    <span class="font-14 fw-500">Formula for:<br>
+                        <span class="text-primary">{{selectedTargetField.dataPath}}</span>
+                    </span>
+                    <button type="button" class="btn btn-link text-dark" (click)="showFormulaBuilder=false">
+                        <span class="dsi dsi-close fw-500"></span>
+                    </button>
+                </div>
+                <div *ngIf="selectedTargetField.source && selectedTargetField.source.length>0"
+                    class="d-flex flex-column p-3 border-bottom text-secondary">
+                    <span *ngFor="let item of selectedTargetField.source;let sourceIndex=index"
+                        class="font-13 fw-400">Use <i>{{item.dataPath}}</i> as <span
+                            class="fw-500">input{{sourceIndex+1}}</span>
+                    </span>
+                </div>
+                <textarea class="form-control border-0"
+                    [(ngModel)]="selectedTargetField.formula">{{baseCode}}</textarea>
+            </div>
             <ng-container *ngIf="targetFields">
                 <div class="sub-header d-flex align-items-center justify-content-between border-bottom bg-white p-3"
                     [ngClass]="{'border-left':selectedTargetField}">
                     <span class="font-14 fw-500">Target Fields</span>
                 </div>
-                <div class="field-block d-flex align-items-center p-3 hover"
+                <!-- <div class="field-block d-flex align-items-center p-3 hover"
                     *ngFor="let item of customTargetFields; let i=index;" (click)="selectedTargetField=item"
                     [ngClass]="{'bg-white':selectedTargetField==item,'border-left':selectedTargetField && selectedTargetField!=item}">
                     <span class="mr-3 text-success font-12 hover underline"
@@ -93,7 +97,10 @@
                     <div class="input-wrapper w-100 d-flex align-items-center position-relative">
                         <span class="font-14 fw-400">{{item?.name}}</span>
                     </div>
-                </div>
+                </div> -->
+                <ng-container *ngFor="let item of customTargetFields; let i=index;">
+                    <ng-container *ngTemplateOutlet="tFields; context: {def:item}"></ng-container>
+                </ng-container>
             </ng-container>
             <ng-container *ngIf="!targetFields">
                 <div class="sub-header d-flex align-items-center justify-content-between border-bottom bg-white p-3"
@@ -130,3 +137,35 @@
         <button type="button" class="btn btn-primary btn-min-width" (click)="done()">Done</button>
     </div>
 </div>
+
+
+
+<ng-template #sFields let-def="def">
+    <div class="field-block d-flex flex-column p-2 mx-2 mt-2 border rounded">
+        <div class="d-flex align-items-center">
+            <odp-checkbox [edit]="edit" class="mx-2" [checked]="isSourceSelected(def)"
+                (checkedChange)="toggleSource($event,def)"></odp-checkbox>
+            <div class="input-wrapper w-100 d-flex align-items-center position-relative mr-3">
+                <span class="font-14 fw-400">{{def?.name}}</span>
+            </div>
+        </div>
+        <ng-container *ngFor="let item of def.definition">
+            <ng-container *ngTemplateOutlet="sFields; context: {def:item}"></ng-container>
+        </ng-container>
+    </div>
+</ng-template>
+
+<ng-template #tFields let-def="def">
+    <div class="field-block d-flex flex-column p-2 mx-2 mt-2 border rounded hover"
+        [ngClass]="{'text-primary':selectedTargetField==def,'border-left':selectedTargetField && selectedTargetField!=def}">
+        <div class="d-flex align-items-center" (click)="selectedTargetField=def">
+            <span class="mr-3 text-success font-12 hover underline" (click)="showFormulaBuilder=true"><i>fn()</i></span>
+            <div class="input-wrapper w-100 d-flex align-items-center position-relative">
+                <span class="font-14 fw-400">{{def?.name}}</span>
+            </div>
+        </div>
+        <ng-container *ngFor="let item of def.definition">
+            <ng-container *ngTemplateOutlet="tFields; context: {def:item}"></ng-container>
+        </ng-container>
+    </div>
+</ng-template>
