--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
@@ -47,10 +47,11 @@
 
     .formula-builder {
         z-index: 2;
+        // width: calc(100% - 140px);
 
         textarea.form-control {
             font-family: monospace;
-            height: calc(100% - 144px);
+            height: calc(100% - 164px);
         }
     }
 }
