node data change

--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -50,7 +50,7 @@
             <span class="url text-accent">{{flowData?.inputStage?.options?.path || 'N.A.'}}</span>
         </div>
         <div class="flow-designer p-4 bg-light-gray">
-            <div *ngIf="flowData?.inputStage" odp-flow-node [currNode]="flowData.inputStage" [nodeList]="nodeList">
+            <div *ngIf="flowData?.inputStage" odp-flow-node [currNode]="flowData.inputStage" [(nodeList)]="nodeList" (nodeListChange)="onNodeChange($event)">
             </div>
             <div [ngClass]="{'show':showNodeProperties}"
                 class="node-properties border-left position-fixed bg-white p-4">
