--- a/src/assets/data-stack-icons/variables.scss
+++ b/src/assets/data-stack-icons/variables.scss
@@ -1,11 +1,12 @@
 $icomoon-font-family: "data-stack-icons" !default;
 $icomoon-font-path: "fonts" !default;
 
+$dsi-api-reciever: "\e962";
 $dsi-logs: "\e950";
 $dsi-mapping: "\e95e";
 $dsi-response: "\e95f";
 $dsi-connector: "\e960";
-$dsi-invoke_api: "\e961";
+$dsi-invoke-api: "\e961";
 $dsi-notification-active-path1: "\e94d";
 $dsi-notification-active-path2: "\e94e";
 $dsi-notification-active-path3: "\e94f";
@@ -99,4 +100,3 @@ $dsi-group: "\e95a";
 $dsi-nano-service: "\e95b";
 $dsi-user: "\e95c";
 $dsi-app-panel: "\e95d";
-
