--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
@@ -9,7 +9,9 @@
     <div class="d-flex align-items-center">
         <div class="node-block px-3 py-2 border rounded bg-white d-flex align-items-center justify-content-start hover"
             (click)="selectNode()">
-            <span *ngIf="node.type=='API'" class="node-icon dsi dsi-invoke-api"></span>
+            <span *ngIf="node.type=='FILE'" class="node-icon dsi dsi-file"></span>
+            <span *ngIf="!prevNode && node.type=='API'" class="node-icon dsi dsi-api-reciever"></span>
+            <span *ngIf="prevNode && node.type=='API'" class="node-icon dsi dsi-invoke-api"></span>
             <span *ngIf="node.type=='CONNECTOR'" class="node-icon dsi dsi-connector"></span>
             <span *ngIf="node.type=='DATASERVICE'" class="node-icon dsi dsi-data-service"></span>
             <span *ngIf="node.type=='FUNCTION'" class="node-icon dsi dsi-function"></span>
@@ -46,8 +48,12 @@
     </div>
     <div *ngIf="showNewNodeDropdown" class="node-options-dropdown bg-dark rounded text-white border position-absolute"
         odpClickOutside (outside)="showNewNodeDropdown=false" [ngStyle]="dropDownStyle">
+        <div class="node-options-item px-3 py-2 d-flex align-items-center hover" (click)="addNode('FILE')">
+            <span class="font-12 fw-400 dsi dsi-file mr-2"></span>
+            <span class="font-12 fw-400">FILE</span>
+        </div>
         <div class="node-options-item px-3 py-2 d-flex align-items-center hover" (click)="addNode('API')">
-            <span class="font-12 fw-400 dsi dsi-invoke-api mr-2"></span>
+            <span class="font-11 fw-400 dsi dsi-invoke-api mr-2"></span>
             <span class="font-12 fw-400">Invoke API</span>
         </div>
         <div class="node-options-item px-3 py-2 d-flex align-items-center hover" (click)="addNode('DATASERVICE')">
