--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -13,37 +13,40 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="nodeName">Node Name</label>
+        <label class="text-secondary" for="nodeName">Node Name</label>
         <input id="nodeName" type="text" class="form-control" [(ngModel)]="currNode.name">
     </div>
     <div class="form-group">
-        <label for="nodeType">Node Type</label>
+        <label class="text-secondary" for="nodeType">Node Type</label>
         <select *ngIf="!prevNode" id="nodeType" class="form-control" [(ngModel)]="currNode.type">
-            <option value="API">API</option>
-            <option value="FILE">FILE</option>
-            <option value="TIMER">TIMER</option>
+            <option value="API">API Reciever</option>
+            <option value="FILE">File Agent</option>
+            <option value="TIMER">Timer</option>
         </select>
         <select *ngIf="prevNode" id="nodeType" class="form-control" [(ngModel)]="currNode.type">
-            <option value="API">API</option>
-            <option value="MAPPING">MAPPING</option>
-            <option value="DATASERVICE">DATASERVICE</option>
-            <option value="FUNCTION">FUNCTION</option>
-            <option value="RESPONSE">RESPONSE</option>
+            <option value="API">API Invoke</option>
+            <option value="FILE">File Agent</option>
+            <option value="MAPPING">Mapping</option>
+            <option value="DATASERVICE">Data Service</option>
+            <option value="FUNCTION">Function</option>
+            <option value="RESPONSE">Response</option>
         </select>
     </div>
-    <div class="form-group">
-        <label for="nodeDataStructure">Data Structure <span class="text-muted"><i>(optional)</i></span></label>
+    <div *ngIf="currNode?.type!='DATASERVICE'" class="form-group">
+        <label class="text-secondary" for="nodeDataStructure">Data Structure
+            <span class="text-muted"><i>(optional)</i></span>
+        </label>
         <odp-data-structure-selector [format]="currNode.dataStructure.outgoing" (formatChange)="onFormatChange($event)">
         </odp-data-structure-selector>
     </div>
     <ng-container *ngIf="!prevNode">
         <ng-container *ngIf="currNode?.type=='API'">
             <div class="form-group">
-                <label for="nodeEndpoint">API Endpoint</label>
+                <label class="text-secondary" for="nodeEndpoint">API Endpoint</label>
                 <input id="nodeEndpoint" type="text" class="form-control" [(ngModel)]="currNode.options.path">
             </div>
             <div class="form-group">
-                <label for="nodeHTTPMethod">HTTP Method</label>
+                <label class="text-secondary" for="nodeHTTPMethod">HTTP Method</label>
                 <select id="nodeHTTPMethod" class="form-control" [(ngModel)]="currNode.options.method">
                     <option value="POST" selected>POST</option>
                     <option value="GET">GET</option>
@@ -60,12 +63,12 @@
     <hr>
     <ng-container *ngIf="currNode?.type=='API' && prevNode">
         <div class="form-group">
-            <label for="nodeUrl">URL</label>
+            <label class="text-secondary" for="nodeUrl">URL</label>
             <textarea id="nodeUrl" class="form-control" cols="30" rows="4"
                 [(ngModel)]="currNode.options.url"></textarea>
         </div>
         <div class="form-group">
-            <label for="nodeHTTPMethod">HTTP Method</label>
+            <label class="text-secondary" for="nodeHTTPMethod">HTTP Method</label>
             <select id="nodeHTTPMethod" class="form-control" [(ngModel)]="currNode.options.method">
                 <option value="POST" selected>POST</option>
                 <option value="GET">GET</option>
@@ -74,14 +77,33 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="nodeBody">Body</label>
+            <label class="text-secondary" for="nodeBody">Body</label>
             <textarea id="nodeBody" class="form-control" cols="30" rows="4"
                 [(ngModel)]="currNode.options.body"></textarea>
         </div>
         <div class="form-group">
-            <label for="nodeHeaders">Headers</label>
+            <label class="text-secondary" for="nodeHeaders">Headers</label>
             <textarea id="nodeHeaders" class="form-control" cols="30" rows="4"
                 [(ngModel)]="currNode.options.headers"></textarea>
+        </div>
+    </ng-container>
+    <ng-container *ngIf="currNode?.type=='FILE'">
+        <div class="form-group">
+            <div class="d-flex align-items-center justify-content-between">
+                <label class="text-secondary" for="agentSelector">Agents</label>
+                <button type="button" class="btn btn-link btn-sm py-0" (click)="showAgentSelector=true">
+                    Select Agent
+                </button>
+            </div>
+            <div *ngIf="currNode.options.agents && currNode.options.agents.length > 0" class="list-group">
+                <div *ngFor="let agent of currNode.options.agents" class="list-group-item d-flex align-items-center justify-content-between">
+                    <span>{{agent.name}}</span>
+                    <span class="dsi dsi-remove text-danger hover" (click)="removeAgent(agent)"></span>
+                </div>
+            </div>
+            <div *ngIf="!currNode.options.agents || currNode.options.agents.length == 0" class="list-group">
+                <div class="list-group-item p-2 text-muted">No Agents Selected</div>
+            </div>
         </div>
     </ng-container>
     <ng-container *ngIf="currNode?.type=='MAPPING'">
@@ -91,18 +113,46 @@
             </button>
         </div>
     </ng-container>
+    <ng-container *ngIf="currNode?.type=='DATASERVICE'">
+        <div class="form-group">
+            <label class="text-secondary" for="serviceSelector">
+                {{currNode?.option?.dataService ? 'Selected' : 'Select'}} Data Service
+            </label>
+            <div *ngIf="currNode?.option?.dataService"
+                class="border rounded p-2 d-flex align-items-center justify-content-between">
+                <span>{{currNode?.option?.dataService.name}}</span>
+                <span class="dsi dsi-remove text-danger hover" (click)="currNode.option.dataService=null"></span>
+            </div>
+            <odp-service-selector *ngIf="!currNode?.option?.dataService" [edit]="edit"
+                [(data)]="currNode.option.dataService"></odp-service-selector>
+        </div>
+    </ng-container>
+    <ng-container *ngIf="currNode?.type=='FUNCTION'">
+        <div class="form-group">
+            <label class="text-secondary" for="functionSelector">{{currNode?.option?.faas ? 'Selected' : 'Select'}}
+                Function
+            </label>
+            <div *ngIf="currNode?.option?.faas"
+                class="border rounded p-2 d-flex align-items-center justify-content-between">
+                <span>{{currNode?.option?.faas.name}}</span>
+                <span class="dsi dsi-remove text-danger hover" (click)="currNode.option.faas=null"></span>
+            </div>
+            <odp-function-selector *ngIf="!currNode?.option?.faas" [edit]="edit" [(data)]="currNode.option.faas">
+            </odp-function-selector>
+        </div>
+    </ng-container>
     <ng-container *ngIf="currNode?.type=='RESPONSE'">
         <div class="form-group">
-            <label for="nodeStatusCode">Status Code</label>
+            <label class="text-secondary" for="nodeStatusCode">Status Code</label>
             <input id="nodeStatusCode" type="text" class="form-control" [(ngModel)]="currNode.options.statusCode">
         </div>
         <div class="form-group">
-            <label for="nodeBody">Body</label>
+            <label class="text-secondary" for="nodeBody">Body</label>
             <textarea id="nodeBody" class="form-control" cols="30" rows="4"
                 [(ngModel)]="currNode.options.body"></textarea>
         </div>
         <div class="form-group">
-            <label for="nodeHeaders">Headers</label>
+            <label class="text-secondary" for="nodeHeaders">Headers</label>
             <textarea id="nodeHeaders" class="form-control" cols="30" rows="4"
                 [(ngModel)]="currNode.options.headers"></textarea>
         </div>
@@ -112,4 +162,13 @@
 <div [ngClass]="{'show':showNodeMapping}" class="node-mapping-window border-left position-fixed bg-white p-4">
     <odp-node-mapping *ngIf="showNodeMapping" [nodeList]="nodeList" [prevNode]="prevNode" [currNode]="currNode"
         (close)="closeMapping($event)"></odp-node-mapping>
+</div>
+
+<div [ngClass]="{'show':showAgentSelector}" class="node-agent-window border-left position-fixed bg-white p-4">
+    <div class="d-flex align-items-center justify-content-between mb-4">
+        <span class="fw-500 font-20">Agents</span>
+        <span (click)="showAgentSelector=false" class="dsi dsi-close text-dark"></span>
+    </div>
+    <hr>
+    <odp-agent-selector *ngIf="showAgentSelector" [edit]="edit" (dataChange)="selectAgent($event)"></odp-agent-selector>
 </div>
