--- a/src/styles.scss
+++ b/src/styles.scss
@@ -918,12 +918,16 @@ $weights: 200,
 
 .node-options-item,
 .node-block {
-  .dsi-api-reciever{
+  .dsi-api-reciever {
     color: #6C7584;
   }
 
   .dsi-invoke-api {
     color: #00CCCB;
+  }
+
+  .dsi-clock {
+    color: #2FC48F;
   }
 
   .dsi-data-service {
