--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.scss
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.scss
@@ -9,6 +9,7 @@
   .flow-designer-canvas {
     height: calc(100vh - 240px);
     overflow: auto;
+    background: rgba($light, 0.4);
   }
 
   .flow-designer-canvas {
